--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,5 @@ models:
     staging:
         jaffle_shop:
                   +materialized: view
+        stripe:
+              +materialized: view
